fixed trash icon width to show properly on mobile

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -189,10 +189,10 @@ h4:hover {
 book:before, book:after {
   box-sizing: inherit;
 }
-.hotel-info-container *:before, .hotel-info-container *:after {
+/* .hotel-info-container *:before, .hotel-info-container *:after {
   content: "";
   position: absolute;
-}
+} */
 
 
 .modal-div {
